# package

./: CMakeLists.txt  README.md  hello.cpp  hello.h  libr.pc.in  library.cpp  library.h
cmake/: ide.cmake  ning.pc.in  ningCPack.cmake  ningConfig.cmake.in  pch.h.in  utils.cmake
include/: inter.h
include/ning/: version.h
src/: hello.cpp
